# pre-commit-hooks

./: .otto.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yaml  release-draft.yaml  tag.yaml
bash_hooks/: deptry.sh  gitleaks.sh
docs/design/: 2026-02-03-no-hardcoded-buckets-hook.md  2026-02-05-no-non-spark-buckets-hook.md  2026-02-12-no-boto3-in-airflow-dags.md
python_hooks/: README.md  app_constraints.py  disallowed_attributes.py  disallowed_function_calls.py  disallowed_identifiers.py  do_not_support_generated_columns.py  dockerfile_poetry.py  forbidden_function_calls.py  forbidden_imports.py  image_tag_branch_constraint.py  no_boto3_in_airflow_dags.py  no_hardcoded_buckets.py  no_non_spark_buckets_in_spark_projects.py  pkg_constraints.py  poetry_app_constraints.py  poetry_pkg_constraints.py  poetry_pkg_dep_constraints.py  validate_branch_name.py
python_hooks/utills/: ignore_check.py
scripts/: get_gitleaks_shas.sh
tests/: test_no_boto3_in_airflow_dags.py  test_no_non_spark_buckets_in_spark_projects.py
tests/python/: test_app_constraints.py  test_disallowed_attributes.py  test_disallowed_function_call.py  test_disallowed_identifiers.py  test_do_not_support_generated_columns.py  test_dockerfile_poetry.py  test_forbidden_function_call.py  test_forbidden_imports.py  test_image_tag_branch_constraint.py  test_imagetag_branch_constraint.py  test_no_hardcoded_buckets.py  test_pkg_constraints.py  test_poetry_app_constraints.py  test_poetry_pkg_constraints.py  test_poetry_pkg_dep_constraints.py  test_validate_branch_name.py
tests/python/data/: app_bad_pyproject.toml  app_good_pyproject.toml  disallowed_function_calls_sample.py  disallowed_sample.py  dockerfile_bad_poetry  dockerfile_good_poetry  forbidden_imports_sample.py  hardcoded_buckets_sample.py  image_tag_branch_sample.py  imagetag_branch_sample.py
tests/python/test_utils/: test_ignore_check.py  test_toml.py
